添加两个案例

--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/index.css">
     <title>Document</title>
 </head>
 <body>
-    学习的一些案例
+    <div class="container">
+        <a href="./pages/typeGame/game.html" class="card">
+            <div class="thumbnail"><img src="./images/A.png" alt="" width='100' height='100'></div>
+            <div class="cardMain">
+                <h2><strong>打字游戏</strong></h2>
+                <p>训练你的大脑，灵活你的手指</p>
+            </div> 
+        </a>
+        <a href="./pages/wuziqi/index.html" class="card">
+            <div class="thumbnail"><img src="./pages/wuziqi/img/bak.jpg" alt="" width='100' height='100'></div>
+            <div class="cardMain">
+                <h2><strong>五子棋</strong></h2>
+                <p>来和朋友酣畅淋漓地下一场吧</p>
+            </div> 
+        </a>
+    </div>
 </body>
 </html>
