--- a/pages/maskSize/index.html
+++ b/pages/maskSize/index.html
@@ -11,6 +11,7 @@
       mask: url('https://blog.jdqiong.cn/grooming-1801287.svg');
       -webkit-mask-size: 100%;
       mask-size: 50%;
+      mask-repeat: no-repeat;
       width: 200px;
       height: 200px;
       background: blue linear-gradient(red, blue);
